# iz80

./: Cargo.toml  README.md  publishing.txt
.github/workflows/: rust.yml
examples/: cpuville.rs  simplest.rs  simplest8080.rs
src/: cpu.rs  cpu_8080.rs  decoder_8080.rs  decoder_z80.rs  environment.rs  lib.rs  machine.rs  opcode.rs  opcode_alu.rs  opcode_arith.rs  opcode_bits.rs  opcode_io.rs  opcode_jumps.rs  opcode_ld.rs  operators.rs  registers.rs  state.rs  timed_runner.rs
tests/: cputest.rs  disasm_z80.rs  ex8080.rs  interrupts.rs  opcodes.rs  opcodes_alu.rs  opcodes_arith.rs  opcodes_bits.rs  opcodes_io.rs  opcodes_jumps.rs  opcodes_ld.rs  serialization.rs  z80test.rs  zexall.rs
tests/res/: origin.txt  z80ccf.out  z80doc.out  z80docflags.out  z80flags.out  z80full.out  z80memptr.out
