[package]
name = "iz80"
version = "0.2.1"
authors = ["Ivan Izaguirre <ivanizag@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Z80 emulator"
keywords = ["Z80", "CP/M", "emulator"]
homepage = "https://github.com/ivanizag/iz80"
repository = "https://github.com/ivanizag/iz80"
readme = "README.md"

[dependencies]
