[package]
name = "iz80"
version = "0.3.4"
authors = ["Ivan Izaguirre <ivanizag@gmail.com>"]
edition = "2018"
license = "bsd-3-clause"
description = "Z80 and 8080 emulator"
keywords = ["Z80", "8080", "CPM", "emulator"]
homepage = "https://github.com/ivanizag/iz80"
repository = "https://github.com/ivanizag/iz80"
readme = "README.md"

[dependencies]
